# AI-Asistant

./: .gitignore  README.md  SikhaAssistant.spec  demo_ui.html  jarvih_phi3mini.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_sikha.bat  sikha_desktop.py  sikha_gui.py  work_assistant.db
actions/: __init__.py  gmail_actions.py  memory_actions.py  system_actions.py  web_actions.py
assistant/: __init__.py  paths.py  router.py  runtime.py  types.py
backend/: .env.ec2.example  requirements.txt  work_assistant.db
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes_auth.py  routes_files.py  routes_plugins.py  routes_system.py  routes_tasks.py
backend/app/core/: __init__.py  auth.py  security.py  task_planner.py  workspace.py
backend/app/db/: __init__.py  models.py  session.py
backend/tests/: test_api.py  test_task_router.py
brain/: __init__.py  llm_client.py  nlu.py
docs/: AWS_EC2_DEPLOYMENT.md  LOW_SPEC_WORK_ASSISTANT_BLUEPRINT.md  PRODUCT_ARCHITECTURE.md  RENDER_DEPLOYMENT.md
frontend/desktop/: README.md
frontend/mobile_companion/: README.md  settings.gradle.kts
frontend/web/: README.md
infra/docker/: Dockerfile.backend  docker-compose.ec2.yml  docker-compose.yml
installer/: SikhaAssistant.iss
integrations/browser/: selenium_client.py
integrations/google/: auth.py  gmail_client.py
memory/: __init__.py  sqlite_store.py
scripts/: build_windows.ps1
storage/demo-workspace/: 2dab2f2a10a04fe08d4b9f3ad1f318f6-JAI RESUME  FOR DATA ANALYSIS.docx
vision/: __init__.py  camera.py  object_detection.py  vision_actions.py
voice/: __init__.py  browser_tts.html  speech_to_text.py  text_to_speech.py
(+41 files in other folders)
